--- a/logiq.html
+++ b/logiq.html
@@ -2,10 +2,12 @@
 <html>
 
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Logstash Monitor</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/cerulean/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/echarts@4.9.0/dist/echarts.min.js"></script>
     <style media="screen" type="text/css">
         .panel-default>.panel-heading {
             color: #555555;
@@ -427,11 +429,21 @@
             </div>
         </div>
 
+        <div id="duration_pie_charts" class="plugin-stats-div col-md-4" style="display:none">
+            <div class="panel panel-default">
+                <div class="panel-heading"></div>
+                <div class="panel-body" style="height: 250px"></div>
+            </div>
+        </div>
+
     </div>
     <script>
         var panels_count = 0;
         //auto refresh interval, ms
         var refresh_interval = 10000;
+
+        // create a map to save echarts objects
+        var chart_map = new Map();
 
         function formatBytes(bytes, decimals) {
             if (bytes == 0) return '0 Bytes';
@@ -504,6 +516,42 @@
                     var filters = plugins_json['filters'];
                     var outputs = plugins_json['outputs'];
 
+                    // echarts variables
+                    var legend_data = [];
+                    var series_data = [];
+                    var duration_pie_chart_option = {
+                        tooltip: {
+                            trigger: 'item',
+                            formatter: '{a} <br/>{b}: {c} ({d}%)'
+                        },
+                        legend: {
+                            orient: 'vertical',
+                            left: 10,
+                            data: []
+                        },
+                        series: [
+                            {
+                                name: 'Duration',
+                                type: 'pie',
+                                radius: ['30%', '55%'],
+                                avoidLabelOverlap: false,
+                                label: {
+                                    show: false,
+                                    position: 'center'
+                                },
+                                emphasis: {
+                                    label: {
+                                        show: false
+                                    }
+                                },
+                                labelLine: {
+                                    show: false
+                                },
+                                data: []
+                            }
+                        ]
+                    };
+
                     for (var i = 0; i < inputs.length; i++) {
                         var input = inputs[i];
                         var id = input['id'];
@@ -519,40 +567,21 @@
 
                     for (var i = 0; i < filters.length; i++) {
                         var filter = filters[i];
-                        var id = filter['id'];
-
-                        var p_in = panel.find("#in" + id);
-                        var p_out = panel.find("#out" + id);
-                        var in_num_new = isNaN(parseInt(filter['events']['in'])) ? 0 : parseInt(filter['events']['in']);
-                        var out_num_new = isNaN(parseInt(filter['events']['out'])) ? 0 : parseInt(filter['events']['out']);
-                        var in_num_old = isNaN(parseInt(p_in.text())) ? 0 : parseInt(p_in.text());
-                        var out_num_old = isNaN(parseInt(p_out.text())) ? 0 : parseInt(p_out.text());
-                        p_in.text(in_num_new);
-                        p_out.text(out_num_new);
-
-                        var dur = filter['events']['duration_in_millis'];
-                        panel.find("#dur" + id).text(dur == null ? 0 : (parseInt(dur)/1000).toFixed(1));
+                        set_fil_out_plugin_data(panel, filter, "filter", legend_data, series_data);
                     }
 
                     for (var i = 0; i < outputs.length; i++) {
                         var output = outputs[i];
-                        var id = output['id'];
-
-                        var p_in = panel.find("#in" + id);
-                        var p_out = panel.find("#out" + id);
-                        var in_num_new = isNaN(parseInt(output['events']['in'])) ? 0 : parseInt(output['events']['in']);
-                        var out_num_new = isNaN(parseInt(output['events']['out'])) ? 0 : parseInt(output['events']['out']);
-                        var in_num_old = isNaN(parseInt(p_in.text())) ? 0 : parseInt(p_in.text());
-                        var out_num_old = isNaN(parseInt(p_out.text())) ? 0 : parseInt(p_out.text());
-                        p_in.text(in_num_new);
-                        p_out.text(out_num_new);
-
-                        var dur = output['events']['duration_in_millis'];
-                        panel.find("#dur" + id).text(dur == null ? 0 : (parseInt(dur)/1000).toFixed(1));
+                        set_fil_out_plugin_data(panel, output, "output", legend_data, series_data);
                     }
 
                     var plugin_panel = panel.find("#plugin_panel_" + pipeline_id);
                     plugin_panel.find('.queue_type').text(pipelines_json[pipeline_id]['queue']['type']);
+
+                    // draw chart
+                    duration_pie_chart_option["legend"]["data"] = legend_data;
+                    duration_pie_chart_option["series"][0]["data"] = series_data;
+                    chart_map.get('duration_pie_charts_' + pipeline_id).setOption(duration_pie_chart_option, true);
                 }
             });
             $.get(host_port + "/_node/stats/jvm", function(data) {
@@ -592,6 +621,33 @@
             var time = dt.getHours() + ":" + dt.getMinutes() + ":" + dt.getSeconds();
             $('#upd_date').text('Last Update: ' + time);
         };
+
+        // set (or update) the metric data of filter plugin or output plugin 
+        // also set echarts data
+        function set_fil_out_plugin_data(panel, data, type, legend_data, series_data) {
+            var id = data['id'];
+            var name = data['name'];
+
+            var p_in = panel.find("#in" + id);
+            var p_out = panel.find("#out" + id);
+            var in_num_new = isNaN(parseInt(data['events']['in'])) ? 0 : parseInt(data['events']['in']);
+            var out_num_new = isNaN(parseInt(data['events']['out'])) ? 0 : parseInt(data['events']['out']);
+            var in_num_old = isNaN(parseInt(p_in.text())) ? 0 : parseInt(p_in.text());
+            var out_num_old = isNaN(parseInt(p_out.text())) ? 0 : parseInt(p_out.text());
+            p_in.text(in_num_new);
+            p_out.text(out_num_new);
+
+            var dur = data['events']['duration_in_millis'];
+            var dur_result = dur == null ? 0 : (parseInt(dur)/1000).toFixed(1);
+            panel.find("#dur" + id).text(dur_result);
+
+            var charts_name = type + "-" + name;
+            var charts_data = {};
+            charts_data["name"] = charts_name;
+            charts_data["value"] = dur_result;
+            legend_data.push(charts_name);
+            series_data.push(charts_data);
+        }
 
         //just init plugins_stats, not calculate
         function init_plugins_stats(panel) {
@@ -663,6 +719,14 @@
 	                    $new_out_stats.show();
 	                    instance_index += 1;
 	                }
+
+                    var instance_id = 'duration_pie_charts_' + pipeline_id;
+                    $new_duration_pid_charts = $('#duration_pie_charts').clone().prop('id', instance_id).appendTo(plugin_stats_body);
+                    $new_duration_pid_charts.find('.panel-heading').text('Pie Charts about Duration');
+                    $new_duration_pid_charts.find('.panel-body').prop("id", instance_id + "_div");
+                    $new_duration_pid_charts.show();
+                    var chart = echarts.init(document.getElementById(instance_id + "_div"));
+                    chart_map.set(instance_id, chart);
                 }
             });
         };
